force-app/main/default/objects/Task/fields/call_score__c.field-meta.xml
<CustomField>
    <fullName>objectionproof__call_score__c</fullName>
    <description>The score returned from the external recording analysis service.</description>
    <label>Call Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>