force-app/main/default/objects/Task/fields/callback_token__c.field-meta.xml
<CustomField>
    <fullName>objectionproof__callback_token__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Secure, single-use token for the external service to use in the callback webhook to update this task.</description>
    <externalId>true</externalId>
    <label>Callback Token</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>