force-app/main/default/objects/Task/fields/recording_url__c.field-meta.xml
<CustomField>
    <fullName>objectionproof__recording_url__c</fullName>
    <description>URL of the recording associated with this task.</description>
    <label>Recording URL</label>
    <type>Url</type>
</CustomField>